syntax = "proto3";

service Kademlia {
  rpc Ping (PingRequest) returns (PingResponse);
  rpc Store (StoreRequest) returns (StoreResponse);
  rpc FindNode (FindNodeRequest) returns (FindNodeResponse);
  rpc FindValue (FindNodeRequest) returns (FindValueResponse);
}

message PingRequest {
    string sender = 1;
    string destination = 2;
}

message PingResponse {
    string response = 1;
}

message StoreRequest {
    string sender = 1;
    string value = 2;
}

message StoreResponse {
    string hash = 1;
}

message FindNodeRequest {
    string sender = 1;
    int32  nodeId = 2;
}

message FindNodeResponse {
    //Contact contact = 1; ??
}

message FindValueResponse {
    //???
}